--- a/src/index.css
+++ b/src/index.css
@@ -113,3 +113,9 @@ body {
 .dark input[type="time"]::-webkit-calendar-picker-indicator {
     filter: invert(1);
   }
+
+@keyframes shimmer {
+    100% {
+        transform: translateX(100%)
+    }
+}
